--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "build:page": "ng build --prod --base-href 'https://radzikoska123.github.io/Rekrutacja/'",
+    "build:page": "ng build --prod --base-href 'https://radzikoska123.github.io/Rekrutacja/spaceflight-news-solvro'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
