--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build --prod --base-href \"https://radzikoska123.github.io/Rekrutacja/\"",
+    "build": "ng build --prod --base-href \"https://jakub-radzik.github.io/Rekrutacja/\"",
     "host": "npx angular-cli-ghpages --dir=dist/spaceflight-news-solvro",
     "deploy": "npm run build && npm run host",
     "watch": "ng build --watch --configuration development",
